# satysfi-derive

./: LICENSE  README.md  Satyristes  satysfi-derive.opam
.github/workflows/: ci.yml
__test__/: README.md  regression.test.js
__test__/satysrc/: check-opam.saty  util.satyh
__test__/satysrc/derive/: 01-derive.saty  02-assume.saty  03-by.saty  04-by-and-byop.saty  05-from.saty  06-dotted-line.saty  07-customized-config.saty
doc/: crash-cource.md  crash-course.md
src/: config.satyh  derive.satyh  line.satyh
src/core/: ast.satyh  render.satyh
src/derive/: render.satyh
