opam-version: "2.0"
name: "satysfi-derive"
version: "1.0.0"
synopsis: "SATySFi commands and DSL for displaying derivation trees with maintainable code."
description: """
SATySFi commands and DSL for displaying derivation trees with maintainable code.

This requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "Yuito Murase <yuito@acupof.coffee>"
authors: [
  "Yuito Murase <yuito@acupof.coffee>"
]
license: "MIT"
homepage: "https://github.com/yabaitechtokyo/satysfi-derive"
bug-reports: "https://github.com/yabaitechtokyo/satysfi-derive/issues"
dev-repo: "git+https://github.com/yabaitechtokyo/satysfi-derive.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satysfi-dist"
  "satysfi-base" {>= "1.4.0" & < "2.0.0"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "derive"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
